# ai-engine

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  ai-engine.toml  ai-engine.toml.example  airproxy.toml.example  cluster.toml
crates/ai-engine/: Cargo.toml
crates/ai-engine-anthropic/: Cargo.toml
crates/ai-engine-anthropic/src/: client.rs  lib.rs  stream.rs
crates/ai-engine-anthropic/tests/: wiremock_anthropic.rs
crates/ai-engine-candle/: Cargo.toml
crates/ai-engine-candle/src/: device.rs  lib.rs  model.rs  pool.rs  provider.rs  template.rs
crates/ai-engine-candle/src/paged/: arch.rs  attention.rs  block_table.rs  engine.rs  mod.rs  rope.rs  transformer.rs
crates/ai-engine-candle/tests/: paged_batching.rs  paged_parity.rs
crates/ai-engine-cluster/: Cargo.toml
crates/ai-engine-cluster/src/: capability.rs  coordinator.rs  leader.rs  lib.rs  metrics.rs  partition.rs  peer.rs  provider.rs  session.rs  tensor_io.rs  tls.rs  view.rs  worker.rs
crates/ai-engine-cluster/src/discovery/: announce.rs  discover.rs  mod.rs  txt.rs
crates/ai-engine-cluster/src/protocol/: codec.rs  control.rs  data.rs  mod.rs  peer.rs
crates/ai-engine-cluster/src/transport/: frame.rs  mesh.rs  mod.rs  quic.rs
crates/ai-engine-cluster/tests/: capability.rs  concurrent_requests.rs  discovery_cluster.rs  discovery_loopback.rs  discovery_txt.rs  gguf_cluster.rs  inprocess_cluster.rs  kv_isolation.rs  leader_partition.rs  mesh_transport.rs  partition_solver.rs  protocol_codec.rs  provider_trait.rs  q4_cluster.rs  q8_cluster.rs  streaming.rs  tensor_io.rs  tls_pinning.rs  transport_loopback.rs  worker_failure.rs  worker_handshake.rs
crates/ai-engine-config/: Cargo.toml
crates/ai-engine-config/src/: lib.rs  validate.rs
crates/ai-engine-config/tests/: load.rs
crates/ai-engine-core/: Cargo.toml
crates/ai-engine-core/src/: activity.rs  cluster_view.rs  ctx.rs  error.rs  gpu.rs  health.rs  (+5 more)
crates/ai-engine-graph/: Cargo.toml
crates/ai-engine-http/: Cargo.toml
crates/ai-engine-http/src/: error.rs  lib.rs  routes.rs  sse.rs
crates/ai-engine-http/tests/: cluster_routes.rs  graph_route.rs  router.rs  services_route.rs
crates/ai-engine-openai/: Cargo.toml
crates/ai-engine-provider/: Cargo.toml
crates/ai-engine-runtime/: Cargo.toml
crates/ai-engine-runtime/examples/: bench_matmul.rs  profile_decode.rs  profile_decode_wgpu.rs
crates/ai-engine-runtime/fixtures/toy-llama-3/: README.md
crates/ai-engine-runtime/fixtures/toy-llama-3-gguf/: README.md  model.gguf
crates/ai-engine-runtime/fixtures/toy-llama-3-q4/: README.md  config.json  model.safetensors  tokenizer.json
crates/ai-engine-runtime/fixtures/toy-llama-3-q8/: README.md  model.safetensors
crates/ai-engine-runtime/scripts/: generate_gguf_q4_0_fixture.py  generate_q4_fixture.py  generate_q8_fixture.py  generate_toy_fixture.py
crates/ai-engine-runtime/src/: backend.rs  config.rs  kv_cache.rs  lib.rs  loader.rs  name_map.rs  quant.rs  request.rs  sample.rs  tokenizer_gguf.rs
crates/ai-engine-runtime/src/arch/: attention.rs  block.rs  embedding.rs  ffn.rs  linear.rs  mod.rs  model.rs  rmsnorm.rs  rope.rs
crates/ai-engine-runtime/src/gguf/: header.rs  metadata.rs  mod.rs  q4_0.rs  q4_1.rs  q6_k.rs  tensor_desc.rs
crates/ai-engine-runtime/tests/: attention.rs  backend_divergence.rs  backend_parity.rs  config.rs  divergence_trace.rs  from_loaded.rs  generation.rs  gguf_header.rs  gguf_loader.rs  gguf_metadata.rs  gguf_model_config.rs  gguf_q4_0_dequant.rs  gguf_q4_1_dequant.rs  gguf_q6_k_dequant.rs  gguf_reference_logits.rs  gguf_tensor_desc.rs  gguf_tokenizer.rs  kv_cache.rs  linear_weight.rs  load_weights_dispatch.rs  loader.rs  model_shape.rs  name_map.rs  norm_and_ffn.rs  q4_linear_weight.rs  q4_loader.rs  q4_reference_logits.rs  q4_tensor.rs  quant.rs  quant_loader.rs  quant_reference_logits.rs  reference_logits.rs  request_lifecycle.rs  rope.rs  sample.rs
crates/ai-engine-rustyllm/: Cargo.toml
crates/ai-engine-rustyllm/src/: lib.rs  provider.rs
crates/ai-engine-rustyllm/tests/: smoke.rs
crates/ai-engine-stages/: Cargo.toml
crates/ai-engine-stages/src/: auth.rs  content_policy.rs  forward.rs  lib.rs  log.rs  model_route.rs
crates/ai-engine-stages/tests/: auth.rs  content_policy.rs  forward.rs  log.rs  model_route.rs
crates/ai-engine-tokenizer/: Cargo.toml
crates/ai-engine-web/: Cargo.toml
crates/ai-engine/src/: advertise.rs  app.rs  cli.rs  discovery.rs  lib.rs  main.rs  signal.rs  worker_main.rs
crates/ai-engine/tests/: app_state.rs  candle_smoke.rs  candle_stream_smoke.rs  cluster_app_state.rs  load_smoke.rs  multiproc_smoke.rs  multiproc_smoke_anynode.rs  multiproc_smoke_gguf.rs  multiproc_smoke_gguf_only.rs  multiproc_smoke_mdns.rs  real_model_smoke.rs  streaming_smoke.rs  wire_compat_anthropic.rs  wire_compat_ollama.rs  wire_compat_openai.rs
crates/ai-engine/tests/common/: mod.rs
crates/airproxy/: Cargo.toml
crates/airproxy-anthropic/: Cargo.toml
crates/airproxy-anthropic/src/: client.rs  lib.rs  stream.rs
crates/airproxy-anthropic/tests/: wiremock_anthropic.rs
crates/airproxy-config/: Cargo.toml
crates/airproxy-core/: Cargo.toml
crates/airproxy-core/src/: ctx.rs  error.rs  lib.rs  stage.rs
crates/airproxy-core/tests/: error.rs  pipeline.rs
crates/airproxy-http/: Cargo.toml
crates/airproxy-http/src/: error.rs  lib.rs  routes.rs  sse.rs
crates/airproxy-http/tests/: router.rs
crates/airproxy-openai/: Cargo.toml
crates/airproxy-provider/: Cargo.toml
crates/airproxy-stages/: Cargo.toml
crates/airproxy-stages/src/: auth.rs  content_policy.rs  forward.rs  lib.rs  log.rs  model_route.rs
crates/airproxy-stages/tests/: auth.rs  content_policy.rs  forward.rs  log.rs  model_route.rs
crates/airproxy/src/: app.rs  cli.rs  lib.rs  main.rs  signal.rs
crates/airproxy/tests/: app_state.rs  load_smoke.rs  wire_compat_ollama.rs  wire_compat_openai.rs
crates/airproxy/tests/common/: mod.rs
docs/design/: knowledge-graph.md
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  d3-force-3d.d.ts  styles.css
(+65 files in other folders)
