[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "tokio"] }
bytes = "1"
futures = "0.3"
globset = "0.4"
hyper = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "macros", "formatting"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }

airproxy-core      = { path = "crates/airproxy-core" }
airproxy-provider  = { path = "crates/airproxy-provider" }
airproxy-openai    = { path = "crates/airproxy-openai" }
airproxy-anthropic = { path = "crates/airproxy-anthropic" }
airproxy-stages    = { path = "crates/airproxy-stages" }
airproxy-config    = { path = "crates/airproxy-config" }
airproxy-http      = { path = "crates/airproxy-http" }
