[package]
name = "ai-engine-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["backend-cpu", "backend-wgpu"]
backend-cpu  = ["dep:burn-ndarray", "dep:ndarray"]
backend-cuda = ["dep:burn-cuda"]
backend-wgpu = ["dep:burn-wgpu"]
backend-metal = ["backend-wgpu"]

[dependencies]
ai-engine-tokenizer.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
burn = { workspace = true, features = ["std"] }
burn-ndarray = { workspace = true, optional = true }
burn-cuda    = { workspace = true, optional = true }
burn-wgpu    = { workspace = true, optional = true }
ndarray = { version = "0.17", features = ["blas"], optional = true }
half.workspace = true
memmap2.workspace = true
safetensors.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rand.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokenizers.workspace = true

openblas-src = { version = "0.10", features = ["static"] }

[dev-dependencies]
burn-ndarray = { workspace = true }
