[package]
name = "airproxy-anthropic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
airproxy-provider.workspace = true
async-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
reqwest = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true }
uuid.workspace = true
wiremock.workspace = true
serde_json.workspace = true
