[package]
name = "airproxy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
airproxy-provider.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
