[package]
name = "airproxy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
airproxy-provider.workspace = true
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
http = { workspace = true }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
bytes.workspace = true
tokio = { workspace = true }
