[package]
name = "airproxy-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
airproxy-core.workspace = true
airproxy-provider.workspace = true
anyhow.workspace = true
arc-swap.workspace = true
axum = { workspace = true }
bytes.workspace = true
futures.workspace = true
http = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
airproxy-stages.workspace = true
async-trait.workspace = true
http-body-util.workspace = true
tower = { version = "0.5", features = ["util"] }
