[package]
name = "airproxy-stages"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
airproxy-core.workspace = true
airproxy-provider.workspace = true
anyhow.workspace = true
async-trait.workspace = true
globset.workspace = true
http = { workspace = true }
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true }
